# arboris-novel

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routers/: __init__.py  admin.py  auth.py  llm_config.py  novels.py  updates.py  writer.py
backend/app/api/routers/blueprint/: __init__.py  blueprint.py  stage.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  init_db.py  session.py  system_config_defaults.py
backend/app/models/: __init__.py  admin_setting.py  llm_config.py  novel.py  prompt.py  rag_metrics.py  system_config.py  update_log.py  usage_metric.py  user.py  user_daily_request.py
backend/app/prompts/blueprint/: __init__.py  step1_basic_info.py  step2_synopsis.py  step3_world_setting.py  step4_characters.py  step5_relationships.py  step6_chapter_outline.py
backend/app/repositories/: admin_setting_repository.py  base.py  llm_config_repository.py  novel_repository.py  prompt_repository.py  rag_metrics_repository.py  system_config_repository.py  update_log_repository.py  usage_metric_repository.py  user_repository.py
backend/app/schemas/: admin.py  blueprint_stage.py  config.py  llm_config.py  novel.py  plot_event.py  prompt.py  user.py
backend/app/services/: admin_setting_service.py  auth_service.py  chapter_context_service.py  chapter_ingest_service.py  config_service.py  llm_config_service.py  llm_service.py  novel_service.py  plot_event_service.py  prompt_service.py  rag_status_service.py  rolling_outline_service.py  update_log_service.py  usage_service.py  user_service.py  vector_store_service.py
backend/app/services/blueprint/: __init__.py  blueprint_service.py  blueprint_service_simple.py  draft_service.py
backend/app/utils/: json_utils.py  llm_tool.py
backend/db/: schema.sql
backend/db/migrations/: 001_add_metadata_to_novel_projects.sql  run_migrations.py
backend/prompts/: blueprint.md  concept.md  concept_legacy.md  evaluation.md  extraction.md  outline.md  screenwriting.md  split_outline.md  writing.md
deploy/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  nginx.conf  supervisord.conf
docs/: RAG.md  novel_workflow.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: admin.ts  llm.ts  novel.ts  updates.ts
frontend/src/assets/: main.css
frontend/src/components/: BlueprintCard.vue  BlueprintConfirmation.vue  BlueprintDisplay.vue  BlueprintEditModal.vue  ChapterList.vue  ChapterOutlineEditor.vue  ChapterWorkspace.vue  CharactersEditor.vue  ChatBubble.vue  ConversationInput.vue  CustomAlert.vue  FactionsEditor.vue  InspirationLoading.vue  KeyLocationsEditor.vue  LLMSettings.vue  ProjectCard.vue  RelationshipsEditor.vue  Tooltip.vue  TypewriterEffect.vue
frontend/src/components/admin/: NovelManagement.vue  PasswordManagement.vue  PromptManagement.vue  RAGStatus.vue  SettingsManagement.vue  Statistics.vue  UpdateLogManagement.vue  UserManagement.vue
frontend/src/components/blueprint/: BlueprintWizard.vue  Stage1Concept.vue  Stage2Framework.vue  Stage3Characters.vue  Stage4Chapters.vue
frontend/src/composables/: useAlert.ts  useBlueprintSSE.ts  useBlueprintStage.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  novel.ts
frontend/src/utils/: text-formatter.ts
frontend/src/views/: AdminNovelDetail.vue  AdminView.vue  InspirationMode.vue  Login.vue  NovelDetail.vue  NovelWorkspace.vue  Register.vue  SettingsView.vue  WorkspaceEntry.vue  WritingDesk.vue
(+21 files in other folders)
